@@ -22,13 +22,20 @@
  */
 
 /*
- * @test
+ * @test id=platform
  * @summary Basic tests for new thread-per-task executors
- * @compile --enable-preview -source ${jdk.version} ThreadPerTaskExecutorTest.java
- * @run testng/othervm/timeout=300 --enable-preview ThreadPerTaskExecutorTest
+ * @enablePreview
+ * @run testng/othervm -DthreadFactory=platform ThreadPerTaskExecutorTest
+ */
+
+/*
+ * @test id=virtual
+ * @enablePreview
+ * @run testng/othervm -DthreadFactory=virtual ThreadPerTaskExecutorTest
  */
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -54,6 +61,7 @@ public class ThreadPerTaskExecutorTest {
     };
 
     private ScheduledExecutorService scheduler;
+    private Object[][] threadFactories;
 
     @BeforeClass
     public void setUp() throws Exception {
@@ -62,7 +70,19 @@ public class ThreadPerTaskExecutorTest {
             thread.setDaemon(true);
             return thread;
         };
-        scheduler = Executors.newSingleThreadScheduledExecutor(factory);
+        this.scheduler = Executors.newSingleThreadScheduledExecutor(factory);
+
+        // thread factories
+        String value = System.getProperty("threadFactory");
+        List<ThreadFactory> list = new ArrayList<>();
+        if (value == null || value.equals("platform"))
+            list.add(Thread.ofPlatform().factory());
+        if (value == null || value.equals("virtual"))
+            list.add(Thread.ofVirtual().factory());
+        assertTrue(list.size() > 0, "No thread factories for tests");
+        this.threadFactories = list.stream()
+                .map(f -> new Object[] { f })
+                .toArray(Object[][]::new);
     }
 
     @AfterClass
@@ -72,20 +92,15 @@ public class ThreadPerTaskExecutorTest {
 
     @DataProvider(name = "factories")
     public Object[][] factories() {
-        return new Object[][] {
-            { Executors.defaultThreadFactory(), },
-            { Thread.ofVirtual().factory(), },
-        };
+        return threadFactories;
     }
 
     @DataProvider(name = "executors")
     public Object[][] executors() {
-        var defaultThreadFactory = Executors.defaultThreadFactory();
-        var virtualThreadFactory = Thread.ofVirtual().factory();
-        return new Object[][] {
-            { Executors.newThreadPerTaskExecutor(defaultThreadFactory), },
-            { Executors.newThreadPerTaskExecutor(virtualThreadFactory), },
-        };
+        return Arrays.stream(threadFactories)
+                .map(f -> Executors.newThreadPerTaskExecutor((ThreadFactory) f[0]))
+                .map(e -> new Object[] { e })
+                .toArray(Object[][]::new);
     }
 
     /**
@@ -216,7 +231,7 @@ public class ThreadPerTaskExecutorTest {
         Future<String> future;
         try (executor) {
             future = executor.submit(() -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 return "foo";
             });
         }
@@ -401,7 +416,7 @@ public class ThreadPerTaskExecutorTest {
             Callable<String> task2 = () -> { throw new FooException(); };
             try {
                 executor.invokeAny(Set.of(task1, task2));
-                fail();
+                fail("invokeAny did not throw");
             } catch (ExecutionException e) {
                 Throwable cause = e.getCause();
                 assertTrue(cause instanceof FooException);
@@ -419,12 +434,12 @@ public class ThreadPerTaskExecutorTest {
             class FooException extends Exception { }
             Callable<String> task1 = () -> { throw new FooException(); };
             Callable<String> task2 = () -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 throw new FooException();
             };
             try {
                 executor.invokeAny(Set.of(task1, task2));
-                fail();
+                fail("invokeAny did not throw");
             } catch (ExecutionException e) {
                 Throwable cause = e.getCause();
                 assertTrue(cause instanceof FooException);
@@ -448,14 +463,14 @@ public class ThreadPerTaskExecutorTest {
 
     /**
      * Test invokeAny where some, not all, tasks complete normally. The
-     * completion of the last task is delayed.
+     * completion of the first task to complete normally is delayed.
      */
     @Test(dataProvider = "executors")
     public void testInvokeAny6(ExecutorService executor) throws Exception {
         try (executor) {
             class FooException extends Exception { }
             Callable<String> task1 = () -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 return "foo";
             };
             Callable<String> task2 = () -> { throw new FooException(); };
@@ -558,7 +573,7 @@ public class ThreadPerTaskExecutorTest {
             Thread.currentThread().interrupt();
             try {
                 executor.invokeAny(Set.of(task1, task2));
-                fail();
+                fail("invokeAny did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
             } finally {
@@ -584,7 +599,7 @@ public class ThreadPerTaskExecutorTest {
             scheduleInterrupt(Thread.currentThread(), Duration.ofMillis(500));
             try {
                 executor.invokeAny(Set.of(task1, task2));
-                fail();
+                fail("invokeAny did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
             } finally {
@@ -657,7 +672,7 @@ public class ThreadPerTaskExecutorTest {
         try (executor) {
             Callable<String> task1 = () -> "foo";
             Callable<String> task2 = () -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 return "bar";
             };
 
@@ -684,7 +699,7 @@ public class ThreadPerTaskExecutorTest {
             class BarException extends Exception { }
             Callable<String> task1 = () -> { throw new FooException(); };
             Callable<String> task2 = () -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 throw new BarException();
             };
 
@@ -711,7 +726,7 @@ public class ThreadPerTaskExecutorTest {
         try (executor) {
             Callable<String> task1 = () -> "foo";
             Callable<String> task2 = () -> {
-                Thread.sleep(Duration.ofMillis(500));
+                Thread.sleep(Duration.ofMillis(50));
                 return "bar";
             };
 
@@ -781,7 +796,7 @@ public class ThreadPerTaskExecutorTest {
             Thread.currentThread().interrupt();
             try {
                 executor.invokeAll(List.of(task1, task2));
-                fail();
+                fail("invokeAll did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
             } finally {
@@ -805,7 +820,7 @@ public class ThreadPerTaskExecutorTest {
             Thread.currentThread().interrupt();
             try {
                 executor.invokeAll(List.of(task1, task2), 1, TimeUnit.SECONDS);
-                fail();
+                fail("invokeAll did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
             } finally {
@@ -815,7 +830,7 @@ public class ThreadPerTaskExecutorTest {
     }
 
     /**
-     * Test interrupt with thread blocked in invokeAll
+     * Test interrupt with thread blocked in invokeAll.
      */
     @Test(dataProvider = "executors")
     public void testInvokeAllInterrupt4(ExecutorService executor) throws Exception {
@@ -825,7 +840,7 @@ public class ThreadPerTaskExecutorTest {
             scheduleInterrupt(Thread.currentThread(), Duration.ofMillis(500));
             try {
                 executor.invokeAll(Set.of(task1, task2));
-                fail();
+                fail("invokeAll did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
 
@@ -841,7 +856,7 @@ public class ThreadPerTaskExecutorTest {
     }
 
     /**
-     * Test interrupt with thread blocked in timed-invokeAll
+     * Test interrupt with thread blocked in timed-invokeAll.
      */
     @Test(dataProvider = "executors")
     public void testInvokeAllInterrupt6(ExecutorService executor) throws Exception {
@@ -851,7 +866,7 @@ public class ThreadPerTaskExecutorTest {
             scheduleInterrupt(Thread.currentThread(), Duration.ofMillis(500));
             try {
                 executor.invokeAll(Set.of(task1, task2), 1, TimeUnit.DAYS);
-                fail();
+                fail("invokeAll did not throw");
             } catch (InterruptedException expected) {
                 assertFalse(Thread.currentThread().isInterrupted());
 
